samples/_failures_safe/1761495547_f48283_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a342898d.c: In function ‘main’:
./samples/SAFE/__tmp_a342898d.c:156:28: error: missing terminating " character
  156 |                     printf("\
      |                            ^~
./samples/SAFE/__tmp_a342898d.c:156:21: error: expected expression at end of input
  156 |                     printf("\
      |                     ^~~~~~
./samples/SAFE/__tmp_a342898d.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a342898d.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a342898d.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a342898d.c:156:21: error: expected declaration or statement at end of input
